# strims_services

./: .env.example  .gitignore  Cargo.toml  model.rs  schema.rs
.github/: .pre-commit-config.yaml
.github/workflows/: rust.yml
migrations/2020-05-18-212743_create_users/: up.sql
migrations/2020-05-18-212845_create_streams/: down.sql  up.sql
migrations/2020-05-18-213112_create_banned_streams/: down.sql  up.sql
migrations/2020-05-18-213415_create_banned_ip_ranges/: down.sql  up.sql
scripts/: generate.bash
src/: channel.rs  config.rs  database.rs  errors.rs  helpers.rs  lib.rs  main.rs  mixer.rs  routes.rs  schema.rs  server.rs  service.rs  smashcast.rs  state.rs  twitch.rs  wsservice.rs  youtube.rs
src/middleware/: auth.rs
src/models/: banned_ip_range.rs  banned_streams.rs  mod.rs  stream.rs  user.rs
src/services/: mixer.rs  mod.rs  twitch.rs
