[package]
name = "async_reqwest"
version = "0.1.0"
authors = ["jbpratt78 <jbpratt78@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0"
serde-json-schema = "0.1.0"
anyhow = "1.0"
async-trait = "0.1.30"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
