[package]
name = "strims_services"
version = "0.1.0"
authors = ["jbpratt78 <jbpratt78@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0"
serde-json-schema = "0.1.0"
anyhow = "1.0"
async-trait = "0.1.30"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-web-actors = "2.0.0"
env_logger = "0.7"
dotenv = "0.15.0"
log = "0.4.8"
