[package]
name = "strims_services"
version = "0.1.0"
authors = ["jbpratt78 <jbpratt78@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0"
serde-json-schema = "0.1.0"
anyhow = "1.0"
async-trait = "0.1.30"
futures = "0.3.5"
url = "2.1.1"
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-web-actors = "2.0.0"
env_logger = "0.7"
dotenv = "0.15.0"
log = "0.4.8"
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "numeric", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4"
jsonwebtoken = "7"
thiserror = "1.0"
regex = "1.3.7"
diesel_migrations = "1.4.0"
